<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:key="stardroid.preferences">
  <PreferenceCategory
    android:title="@string/provider_prefs">
    <!-- TODO(johntaylor): restore this once it's toggling properly CheckBoxPreference
      android:key="show_sky_gradient"
      android:defaultValue="true"
      android:title="@string/show_sky_gradient" /-->
    <CheckBoxPreference
      android:key="source_provider.0"
      android:defaultValue="false"
      android:title="@string/show_stars_pref" />
    <CheckBoxPreference
      android:key="source_provider.1"
      android:defaultValue="false"
      android:title="@string/show_constellations_pref" />
    <CheckBoxPreference
      android:key="source_provider.2"
      android:defaultValue="false"
      android:title="@string/show_messier_objects_pref" />
    <CheckBoxPreference
      android:key="source_provider.3"
      android:defaultValue="false"
      android:title="@string/show_planets_pref" />
    <CheckBoxPreference
      android:key="source_provider.6"
      android:defaultValue="false"
      android:title="@string/show_meteors_pref" />
    <CheckBoxPreference
      android:key="source_provider.4"
      android:defaultValue="false"
      android:title="@string/show_grid_pref" />
    <CheckBoxPreference
      android:key="source_provider.5"
      android:defaultValue="true"
      android:title="@string/show_horizon_pref" />
    <CheckBoxPreference
      android:key="source_provider.10"
      android:defaultValue="true"
      android:title="@string/show_continent_pref" />
    <!--  TODO(johntaylor): restore this once it's toggling properly CheckBoxPreference
      android:key="show_planetary_images"
      android:defaultValue="true"
      android:title="@string/planetary_images" /-->
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/other">
    <CheckBoxPreference
        android:defaultValue="false"
        android:title="@string/night_mode_pref"
        android:key="night_mode"/>
  </PreferenceCategory>
</PreferenceScreen>
